@@ -8,14 +8,8 @@ CATEGORIES=	games
 MAINTAINER=	amdmi3@FreeBSD.org
 COMMENT=	Escape of the cat - hardcore oldschool platformer
 
-LICENSE=	CCbySA30 CCbySA40
-LICENSE_COMB=		multi
-LICENSE_NAME_CCbySA30=	Creative Commons Attribution-ShareAlike 3.0 Unported license
-LICENSE_NAME_CCbySA40=	Creative Commons Attribution-ShareAlike 4.0 International Public License
-LICENSE_TEXT_CCbySA30=	https://creativecommons.org/licenses/by-sa/3.0/legalcode
-LICENSE_TEXT_CCbySA40=	https://creativecommons.org/licenses/by-sa/4.0/legalcode
-LICENSE_PERMS_CCbySA30=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
-LICENSE_PERMS_CCbySA40=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
+LICENSE=	CC-BY-SA-3.0 CC-BY-SA-4.0
+LICENSE_COMB=	multi
 
 RUN_DEPENDS=	instead:games/instead
 
